--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build:js": "esbuild enhance-entry.js --bundle --outfile=enhance.js",
     "build:wasm": "./javy/javy-x86_64-macos-v1.4.0 compile enhance.js -o enhance.wasm",
-    "build": "npm run build:js && npm run build:wasm",
+    "build": "npm run build:js && npm run build:wasm"
   },
   "devDependencies": {
     "@enhance/enhance-style-transform": "^0.1.2",
